# uwu-story-game

./: CMakeLists.txt  README.md
libs/: libco.c
src/: main.c
